# CompGraph-Game

./: CMakeLists.txt  LICENSE  README.md  todo.md
docs/: map_reader_idea.md  para compilar glfw  tasks.md  todo.md
maps/: one.map  three.map  tst.1.map  tst.map
pr/: stream.cpp
shaders/: example_v.glsl
src/: common.hpp  config.hpp  example.cpp  game.cpp  game_example.cpp  game_openGl2.cpp  imgDummy.cpp  mapReader.hpp
src/helpers/: camera.cpp  camera.hpp  texture.cpp
src/objects/: background.hpp  foreground.hpp  initialFloor.hpp  object.hpp  object1.hpp  obstacle.hpp  player.hpp  rectangle.hpp  rectangle1.hpp
src/objects/obstacles/: block.hpp  coin.hpp  fireball.hpp  floor.hpp  goal.hpp  hole.hpp  obstacle.hpp  rock.hpp
